<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DD000000"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/nimblelogo"
        app:layout_constraintBottom_toTopOf="@id/cardEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="#80000000"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@id/cardPassword"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:background="@android:color/transparent"
            android:hint="@string/login_screen_hints_email"
            android:textColor="@color/white"
            android:textColorHint="@color/gray" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPassword"
        app:cardBackgroundColor="#80000000"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:background="#80ffffff"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/login_screen_hints_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/gray" />

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:text="@string/login_screen_forgot_password_label"
                android:textIsSelectable="false"
                android:textColor="@color/gray" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        app:cornerRadius="12dp"
        android:text="@string/login_screen_login_button_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>