<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.HomeScreenActivity">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:contentDescription="@string/home_screen_tak_survey_background_description" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp">

        <ProgressBar
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="MONDAY, JUN 15"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Today"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDate" />

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/avatar_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/txtHeader"
            android:contentDescription="@string/home_screen_tak_survey_avatar_image_description" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@id/txtSurveyTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:tabBackground="@drawable/tab_selector"
            app:tabIndicatorHeight="0dp" />

        <TextView
            android:id="@+id/txtSurveyTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Career training and development"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fabTakeSurvey"
            app:layout_constraintBottom_toTopOf="@id/txtSurveyDetails" />

        <TextView
            android:id="@+id/txtSurveyDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="We would like to know what are your goals and skills you wanted to improve."
            android:textColor="@color/white"
            android:textSize="20sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fabTakeSurvey"
            app:layout_constraintTop_toTopOf="@id/fabTakeSurvey"
            app:layout_constraintBottom_toBottomOf="@id/fabTakeSurvey" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabTakeSurvey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_arrow_forward_ios_24"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_arrow_forward_ios_24"
            android:contentDescription="@string/home_screen_tak_survey_button_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>